--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.5.1
+  - 2.3.8
+  - 2.4.5
+  - 2.5.3
+  - 2.6.0-preview2
 before_install: gem install bundler -v 1.16.6
