--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ rvm:
   - 2.5.3
   - 2.6.0-preview2
 before_install: gem install bundler -v 1.16.6
+gemfile:
+  - gemfiles/fluentd_0.12.gemfile
+  - gemfiles/fluentd_0.14.gemfile
